--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/Joelkb/cinemagoer
+git+https://github.com/Blackhathackersz/nitish
 pyrogram>=2.0.30
 tgcrypto
 pymongo[srv]==3.12.3
